[package]
name = "yandex-music-rs"
version = "0.1.0"
edition = "2021"
description = "Rust app for Yandex Music"

[dependencies]
tinyfiledialogs = "3.9.1"
web-view = { git = "https://github.com/Boscop/web-view", ref = "e87e08cab3a2d500d54068ec9c7aaa055a711465" }

[features]
edge = ["web-view/edge"]

[package.metadata.bundle]
name = "Yandex Music"
identifier = "io.github.aksejs.yandex-music-rs"
icon = ["src/icon.png"]
category = "Music"
short_description = "Rust app for Yandex Music"
