[package]
name = "yandex-music-rs"
version = "0.1.0"
edition = "2021"
description = "Rust app for Yandex Music"

[dependencies]
web-view = { git = "https://github.com/Boscop/web-view", ref = "82d7cbce6228b1a964673cc0f22944ad808eab42", features = ["edge"] }

[package.metadata.bundle]
name = "Yandex Music"
identifier = "io.github.aksejs.yandex-music-rs"
icon = ["src/icon.png"]
category = "Music"
short_description = "Rust app for Yandex Music"
